<resources>
    <string name="app_name">Task tracker</string>
    <string name="to_do_list">To Do List</string>
    <string name="search_icon">search_icon</string>
    <string name="search_notes">Search notes</string>
    <string name="back">back</string>
    <string name="last_edited_on">Last edited on</string>
    <string name="example_last_updated_on">Sat 24-Sep-2020 12:40:15</string>
    <string name="pin">pin</string>
    <string name="save">save</string>
    <string name="add_image">Add image</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="add_url">Add URL</string>
    <string name="choose_background">Choose background</string>
    <string name="cancel">CANCEL</string>
    <string name="take_photo">TAKE PHOTO</string>
    <string name="choose_from_gallery">CHOOSE FROM LIBRARY</string>
    <string name="add_title">Add title</string>
    <string name="add">ADD</string>
    <string name="add_Link">Link</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="unpin_note">Unpin Note</string>
    <string name="are_you_sure_you_want_to_unpin_this_note">Are you sure you want to unpin this note?</string>
    <string name="remainders">Remainders</string>
    <string name="add_remainder">Add Remainder</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="SAVE">SAVE</string>
    <string name="remainder">Remainder!</string>
    <string name="search_remainders">Search remainders</string>
</resources>