<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_add_url_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_20sdp"
    android:layout_gravity="center"
    android:background="@drawable/background_dialog">

    <ImageView
        android:id="@+id/dialog_add_url_imageView"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:src="@drawable/web1"
        app:tint="@color/colorIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dialog_add_url_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/oswald_semibold"
        android:text="@string/add_url"
        android:includeFontPadding="false"
        android:textSize="@dimen/_18ssp"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/dialog_add_url_imageView"
        app:layout_constraintTop_toTopOf="@id/dialog_add_url_imageView"
        app:layout_constraintBottom_toBottomOf="@id/dialog_add_url_imageView"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/dialog_add_title_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/custom_input_edit_text"
        android:padding="@dimen/_5sdp"
        android:drawableStart="@drawable/write"
        android:drawablePadding="@dimen/_15sdp"
        android:drawableTint="@color/colorIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_add_url_textView"
        android:hint="@string/add_title"
        android:textSize="@dimen/_15ssp"
        android:fontFamily="@font/roboto_medium"
        android:includeFontPadding="false"
        android:textColor="@color/white"
        android:ems="10"
        android:inputType="text"/>

    <EditText
        android:id="@+id/dialog_add_link_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:background="@drawable/custom_input_edit_text"
        android:drawableStart="@drawable/web2"
        android:drawablePadding="@dimen/_15sdp"
        android:drawableTint="@color/colorIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_add_title_editText"
        android:hint="@string/add_Link"
        android:textSize="@dimen/_15ssp"
        android:fontFamily="@font/roboto_medium"
        android:includeFontPadding="false"
        android:textColor="@color/white"
        android:ems="10"
        android:inputType="text"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dialog_add_option_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/roboto_medium"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/add"
        android:textColor="@color/colorSecondary"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_add_link_editText"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dialog_cancel2_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/roboto_medium"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/cancel"
        android:textColor="@color/colorSecondary"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_add_link_editText"
        app:layout_constraintEnd_toStartOf="@id/dialog_add_option_textView" />






</androidx.constraintlayout.widget.ConstraintLayout>