<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:liftOnScroll="true">
            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|enterAlways">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true">
                    <ImageView
                        android:id="@+id/back_imageView"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:src="@drawable/baseline_arrow_back_ios_24"
                        app:tint="@color/colorIcon"
                        android:clickable="true"
                        android:focusable="true"
                        android:contentDescription="@string/back" />

                    <LinearLayout
                        android:id="@+id/last_edited_on_linear_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_6sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/back_imageView"
                        android:visibility="visible"

                        android:orientation="vertical">
                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/last_edited_on"
                            android:textColor="@color/colorIcon"
                            android:layout_gravity="center_horizontal"
                            android:background="@drawable/background_search"
                            android:textSize="@dimen/_12ssp"
                            android:fontFamily="@font/roboto_medium"
                            android:padding="@dimen/_2sdp"/>

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/date_textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorIcon"
                            android:text="@string/example_last_updated_on"
                            android:background="@drawable/background_search"
                            android:layout_gravity="center_horizontal"
                            android:textSize="@dimen/_12ssp"
                            android:fontFamily="@font/roboto_medium"
                            android:padding="@dimen/_2sdp"/>


                    </LinearLayout>

                    <ImageView
                        android:id="@+id/pin_imageView"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_toEndOf="@+id/last_edited_on_linear_layout"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/_6sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:src="@drawable/pin_filled"
                        android:clickable="true"
                        android:focusable="true"
                        android:contentDescription="@string/pin"/>

                    <ImageView
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_70sdp"
                        android:layout_toEndOf="@+id/pin_imageView"
                        android:layout_centerVertical="true"
                        android:src="@drawable/baseline_save_24"
                        app:tint="@color/colorIcon"
                        android:clickable="true"
                        android:focusable="true"
                        android:contentDescription="@string/save"/>

                </RelativeLayout>
            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_40sdp"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/add_image_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:src="@drawable/add_image"
                        android:layout_margin="@dimen/_10sdp"
                        android:contentDescription="@string/add_image"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:includeFontPadding="false"
                        android:textSize="@dimen/_14ssp"
                        android:textColor="@color/colorHint"
                        android:text="@string/add_image"/>


                </LinearLayout>
                <EditText
                    android:id="@+id/title_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:background="@null"
                    android:fontFamily="@font/oswald_semibold"
                    android:hint="@string/title"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textMultiLine"
                    android:padding="@dimen/_5sdp"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold"
                    android:layout_below="@id/add_image_linear_layout"
                    android:textColorHint="@color/colorHint"/>

                <LinearLayout
                    android:id="@+id/note_desc_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title_edittext"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:background="@drawable/background_note"/>
                    <com.yahiaangelo.markdownedittext.MarkdownEditText
                        android:id="@+id/note_description_markdownEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:layout_marginEnd="@dimen/_12sdp"
                        android:layout_marginTop="@dimen/_18sdp"
                        android:background="@null"
                        android:fontFamily="@font/roboto_medium"
                        android:inputType="textMultiLine"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:padding="@dimen/_5sdp"
                        android:textSize="@dimen/_25ssp"
                        android:hint="@string/note"
                        android:textColorHint="@color/colorHint"/>


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_below="@id/note_desc_linear_layout"
                    android:orientation="horizontal"
                    android:background="@drawable/background_search">
                    <ImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:src="@drawable/baseline_add_link_24"
                        app:tint="@color/colorIcon"/>
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:text="@string/add_url"
                        android:textSize="@dimen/_14ssp"
                        android:includeFontPadding="false"
                        android:fontFamily="@font/roboto_medium"
                        android:textColor="@color/colorHint"/>


                </LinearLayout>


            </RelativeLayout>



        </ScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
